--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Vite App</title>
   </head>
   <body style="background-color: rgb(255, 255, 255);">
-    <header>
+    <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
+    <div class="menu-opciones">
       <a style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
         <a style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
         <a style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
-    </header>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
