--- a/informes.html
+++ b/informes.html
@@ -7,12 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <a style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
-            <a style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
-            <a style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
-      </header>
-     <h1>informes</h1>
+    <h1 class="title">CONFECCIONES PEPITA</h1>
+    <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
+    <div class="menu-opciones">
+        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
+            <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
+            <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
+    </div>
+      <div id="cards">
+        <div    class="card text-center mb-3" style="width: 18rem;border: none;">
+            <div id="tarjeta" class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+              <a href="#" class="btn btn-primary">Inventario</a>
+            </div>
+          </div>
+          <div   class="card text-center mb-3" style="width: 18rem;border: none;">
+            <div id="tarjeta" class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+              <a href="#" class="btn btn-primary">Trabajadores</a>
+            </div>
+          </div>
+          <div   class="card text-center mb-3 " style="width: 18rem;border: none; ">
+            <div id="tarjeta" class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+              <a href="#" class="btn btn-primary">Otros</a>
+            </div> 
+          </div>
+      </div>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
