--- a/registro.html
+++ b/registro.html
@@ -9,33 +9,35 @@
     
 </head>
 <body>
-    <header>
-        <a style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
-        <a style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
-        <a style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
-      </header>
-      <div class="d-flex justify-content-around">
-        <div class="card text-center mb-3" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+  <h1 class="title">CONFECCIONES PEPITA</h1>
+  <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
+    <div class="menu-opciones">
+        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
+        <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
+        <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
+    </div>
+      <div id="cards">
+        <div    class="card text-center mb-3" style="width: 18rem; border: none;">
+          <div id="tarjeta" class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <img class="iconos" src="/public/blogs.png" alt="blog">
+            <a href="#" class="btn btn-primary">Inventario</a>
           </div>
-          <div class="card text-center mb-3" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+        </div>
+        <div   class="card text-center mb-3" style="width: 18rem; border: none;">
+          <div id="tarjeta" class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <img class="iconos" src="/public/blogs.png" alt="blog">
+            <a href="#" class="btn btn-primary">Trabajadores</a>
           </div>
-          <div class="card text-center mb-3" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+        </div>
+        <div   class="card text-center mb-3 " style="width: 18rem; border: none;">
+          <div id="tarjeta" class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <img class="iconos" src="/public/blogs.png" alt="blog">
+            <a href="#" class="btn btn-primary">Otros</a>
+          </div> 
+        </div>
       </div>
     <script type="module" src="/main.js"></script>
 </body>
