node modules install

--- a/calculador.html
+++ b/calculador.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src\style.css">
+    <link rel="stylesheet" href="boostrap.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
             </div>
       <div id="cards">
-        <div    class="card text-center mb-3" style="width: 18rem;border: none;">
+        <div class="card text-center mb-3" style="width: 18rem;border: none;">
           <div id="tarjeta" class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <img class="iconos" src="/public/calculadora.png" alt="blog">
