diseño de pagina
Signed-off-by: Alejo0507 <castillocazorla05@gmail.com>

--- a/informes.html
+++ b/informes.html
@@ -6,37 +6,38 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="title">CONFECCIONES PEPITA</h1>
-    <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
+<body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
+    <a id="inicio" href="/index.html">Inicio</a>
+  <h1 class="title">CONFECCIONES PEPITA</h1>
+    <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
-        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h3></a>
-            <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h3></a>
-            <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h3></a>
+        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h4></a>
     </div>
-      <div id="cards">
-        <div    class="card text-center mb-3" style="width: 18rem;border: none;">
+    <div id="cards" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-              <a href="#" class="btn btn-primary">Inventario</a>
+                <h5 class="card-title  text-light">Special title treatment</h5>
+                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+                <a href="#" id="botones" class="btn btn-primary">Inventario</a>
             </div>
-          </div>
-          <div   class="card text-center mb-3" style="width: 18rem;border: none;">
+        </div>
+        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-              <a href="#" class="btn btn-primary">Trabajadores</a>
+                <h5 class="card-title  text-light">Special title treatment</h5>
+                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+                <a href="#" id="botones" class="btn btn-primary">Trabajadores</a>
             </div>
-          </div>
-          <div   class="card text-center mb-3 " style="width: 18rem;border: none; ">
+        </div>
+        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-              <a href="#" class="btn btn-primary">Otros</a>
-            </div> 
-          </div>
-      </div>
+                <h5 class="card-title  text-light">Special title treatment</h5>
+                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+                <a href="#"  id="botones" class="btn btn-primary">Otros</a>
+            </div>
+        </div>
+    </div>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
