feat: :sparkles: Agregada componente de calculadora

--- a/calculador.html
+++ b/calculador.html
@@ -17,10 +17,10 @@
             </div>
       <div id="cards">
         <div class="card text-center mb-3" style="width: 18rem;border: none;">
-          <div id="tarjeta" class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
+          <div id="tarjeta" class="productividad card-body">
+            <h5 class="card-title">Calcular productividad</h5>
             <img class="iconos" src="/public/calculadora.png" alt="blog">
-            <a href="#" class="btn btn-primary">Inventario</a>
+            <button id="calcular-productividad" class="btn btn-primary">Calcular</button>
           </div>
         </div>
         <div   class="card text-center mb-3" style="width: 18rem;border: none;">
