--- a/calculador.html
+++ b/calculador.html
@@ -22,8 +22,9 @@
             <img class="iconos" src="/public/calculadora.png" alt="blog">
             <button id="calcular-productividad" class="btn btn-primary">Calcular</button>
           </div>
+          <calculadora-elemento></calculadora-elemento>
         </div>
-        <div   class="card text-center mb-3" style="width: 18rem;border: none;">
+        <div class="card text-center mb-3" style="width: 18rem;border: none;">
           <div id="tarjeta" class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <img class="iconos" src="/public/calculadora.png" alt="blog">
