--- a/calculador.html
+++ b/calculador.html
@@ -19,10 +19,11 @@
     <div id="cards">
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light" >Special title treatment</h5>
+                <h5 class="card-title  text-light" >Calcular eficiencia operativa</h5>
                 <img class="iconos" src="/public/calculadora.png" alt="blog">
-                <a href="#" id="botones" class="btn btn-primary">Inventario</a>
+                <button href="#" id="calcular-productividad" class="calcular-boton btn btn-primary">Inventario</button>
             </div>
+            <calc-eficiencia</calc-eficiencia>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
