feat: :sparkles: arreglo de modal eficiencia

--- a/calculador.html
+++ b/calculador.html
@@ -23,7 +23,7 @@
                 <img class="iconos" src="/public/calculadora.png" alt="blog">
                 <button href="#" id="calcular-productividad" class="calcular-boton btn btn-primary">Inventario</button>
             </div>
-            <calc-eficiencia</calc-eficiencia>
+            <calc-eficiencia></calc-eficiencia>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
