feat: :Sparkles: bonton de produccion

--- a/calculador.html
+++ b/calculador.html
@@ -25,6 +25,7 @@
             </div>
             <calc-eficiencia></calc-eficiencia>
         </div>
+        </div>
     </div>
     <script type="module" src="/main.js"></script>
 </body>
