feat: :Sparkles: bonton de produccion

--- a/registro.html
+++ b/registro.html
@@ -21,14 +21,14 @@
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title text-light">Registro de Materia Prima</h5>
                 <img class="iconos" src="/public/blogs.png" alt="blog">
-                <button href="#" id="botones" class="btn btn-primary">Inventario</button>
+                <button href="#" id="inventario" class="btn btn-primary">Inventario</button>
             </div>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title text-light">Special title treatment</h5>
+                <h5 class="card-title text-light">Produccion de productos</h5>
                 <img class="iconos" src="/public/blogs.png" alt="blog">
-                <button href="#" id="botones" class="btn btn-primary">Trabajadores</button>
+                <button href="#" id="produccion" class="btn btn-primary">Produccion</button>
             </div>
         </div>
     </div>
