Boton de produccion

--- a/calculador.html
+++ b/calculador.html
@@ -26,6 +26,13 @@
             <calc-eficiencia></calc-eficiencia>
         </div>
         </div>
+        <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
+            <div id="tarjeta" class="card-body">
+                <h5 class="card-title  text-light" >Special title treatment</h5>
+                <img class="iconos" src="/public/calculadora.png" alt="blog">
+                <a href="#" id="botones" class="btn btn-primary">Trabajadores</a>
+            </div>
+        </div>
     </div>
     <script type="module" src="/main.js"></script>
 </body>
