feat: :sparkles: Terminado calculadora e inicio de mano de obra

--- a/calculador.html
+++ b/calculador.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src\style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boostrap.css">
     <title>Document</title>
 </head>
@@ -21,10 +21,9 @@
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light" >Calcular eficiencia operativa</h5>
                 <img class="iconos" src="/public/calculadora.png" alt="blog">
-                <button href="#" id="calcular-productividad" class="calcular-boton btn btn-primary">Inventario</button>
+                <button href="#" id="calcular-productividad" class="calcular-boton btn btn-primary">Calcular</button>
             </div>
             <calc-eficiencia></calc-eficiencia>
-        </div>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
@@ -32,6 +31,7 @@
                 <img class="iconos" src="/public/calculadora.png" alt="blog">
                 <a href="#" id="botones" class="btn btn-primary">Trabajadores</a>
             </div>
+            <calc-obra></calc-obra>
         </div>
     </div>
     <script type="module" src="/main.js"></script>
