boton de costos extras

--- a/registro.html
+++ b/registro.html
@@ -31,6 +31,14 @@
                 <button href="#" id="produccion" class="btn btn-primary">Produccion</button>
             </div>
         </div>
+        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
+            <div id="tarjeta" class="card-body">
+                <h5 class="card-title text-light">Registrar costos indirectos</h5>
+                <img class="iconos" src="/public/blogs.png" alt="blog">
+                <button href="#" id="Costos-indirectos" class="btn btn-primary">Costos</button>
+            </div>
+        </div>
+        
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/src/components/registros.js"></script>
