feat: :sparkles: Componente calcular costos mano de obra

--- a/calculador.html
+++ b/calculador.html
@@ -27,9 +27,9 @@
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light" >Special title treatment</h5>
+                <h5 class="card-title  text-light" >Calcular costos de mano de obra</h5>
                 <img class="iconos" src="/public/calculadora.png" alt="blog">
-                <a href="#" id="botones" class="btn btn-primary">Trabajadores</a>
+                <button id="calcularManoDeObra" class="btn btn-primary">Trabajadores</button>
             </div>
             <calc-obra></calc-obra>
         </div>
