--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title text-light">Produccion de productos</h5>
+                <h5 class="card-title text-light">Lotes de produccion</h5>
                 <img class="iconos" src="/public/blogs.png" alt="blog">
                 <button href="#" id="produccion" class="btn btn-primary">Produccion</button>
             </div>
