actualizacion de cambios

--- a/informes.html
+++ b/informes.html
@@ -22,21 +22,21 @@
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#" id="botones" class="btn btn-primary">Inventario</button>
+                <button href="#" id="informeuno" class="btn btn-primary">Inventario</button>
             </div>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#" id="botones" class="btn btn-primary">Trabajadores</button>
+                <button href="#" id="informedos" class="btn btn-primary">Trabajadores</button>
             </div>
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#"  id="botones" class="btn btn-primary">Otros</button>
+                <button href="#"  id="informetres" class="btn btn-primary">Otros</button>
             </div>
         </div>
     </div>
