feat: :sparkles: Script para mandar datos a Api

--- a/informes.html
+++ b/informes.html
@@ -24,8 +24,6 @@
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
                 <button href="#" id="botones" class="btn btn-primary">Inventario</button>
             </div>
-
-            
         </div>
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
@@ -42,7 +40,10 @@
             </div>
         </div>
     </div>
-    <script type="module" src="/src/components/informes.js"></script>
+
+    <tabla-informe></tabla-informe>
+
+    <script type="module" src="/src/components/tabla.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
