--- a/informes.html
+++ b/informes.html
@@ -17,22 +17,22 @@
         <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h4></a>
         <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h4></a>
     </div>
-    <div id="cards" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+    <div id="info1" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#" id="informeuno" class="btn btn-primary">Inventario</button>
+                <button id="informeuno" class="btn btn-primary">Inventario</button>
             </div>
         </div>
-        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
+        <div id="info2" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
                 <button href="#" id="informedos" class="btn btn-primary">Trabajadores</button>
             </div>
         </div>
-        <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
+        <div id="info3" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Special title treatment</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
@@ -44,6 +44,6 @@
     <tabla-informe></tabla-informe>
 
     <script type="module" src="/src/components/tabla.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/scripts/tabla/abrirYcerrar.js" ></script>
 </body>
 </html>
