diseñod de  tabla

--- a/informes.html
+++ b/informes.html
@@ -20,7 +20,7 @@
     <div id="info1" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light">Special title treatment</h5>
+                <h5 class="card-title  text-light">Inventario de Materia Prima</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
                 <button id="informeuno" class="btn btn-primary">Inventario</button>
             </div>
