--- a/informes.html
+++ b/informes.html
@@ -27,9 +27,9 @@
         </div>
         <div id="info2" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light">Special title treatment</h5>
+                <h5 class="card-title  text-light">Lotes en produccion</h5>
                 <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#" id="informedos" class="btn btn-primary">Trabajadores</button>
+                <button href="#" id="informedos" class="btn btn-primary">lotes</button>
             </div>
         </div>
         <div id="info3" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
@@ -42,6 +42,8 @@
     </div>
 
     <tabla-informe></tabla-informe>
+    <tabla-informe-lote></tabla-informe-lote>
+
 
     <script type="module" src="/src/components/tabla.js"></script>
     <script type="module" src="/src/scripts/tabla/abrirYcerrar.js" ></script>
