--- a/registro.html
+++ b/registro.html
@@ -124,7 +124,7 @@
         </div>
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Cantidad de Productos</label>
-                <input type="number" class="form-control" id="costoUnidad">
+                <input type="number" class="form-control" id="cantidadproductos">
             </div>
             
            
