tabla de lotes arreglos

--- a/informes.html
+++ b/informes.html
@@ -46,6 +46,7 @@
 
 
     <script type="module" src="/src/components/tabla.js"></script>
+    <script type="module" src="/src/components/tablaLotes.js"></script>
     <script type="module" src="/src/scripts/tabla/abrirYcerrar.js" ></script>
 </body>
 </html>
