feat: :sparkles: Tabla de lotes funcionando
Se crea la tabla de lotes y se imprime en una tabla cuando
se le da click al boton indicado, obteniendo datos del mockApi

--- a/informes.html
+++ b/informes.html
@@ -47,6 +47,6 @@
 
     <script type="module" src="/src/components/tabla.js"></script>
     <script type="module" src="/src/components/tablaLotes.js"></script>
-    <script type="module" src="/src/scripts/tabla/abrirYcerrar.js" ></script>
+    <script type="module" src="/src/scripts/mainTablas.js"></script>
 </body>
 </html>
