--- a/informes.html
+++ b/informes.html
@@ -21,32 +21,35 @@
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Inventario de Materia Prima</h5>
-                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+                <img class="iconos" src="/public/lista-de-quehaceres (5).png" alt="blog">
                 <button id="informeuno" class="btn btn-primary">Inventario</button>
             </div>
         </div>
         <div id="info2" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light">Lotes en produccion</h5>
-                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
+                <img class="iconos" src="/public/lista-de-quehaceres (6).png" alt="blog">
                 <button href="#" id="informedos" class="btn btn-primary">lotes</button>
             </div>
         </div>
         <div id="info3" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light">Special title treatment</h5>
-                <img class="iconos" src="/public/lista-de-deseos.png" alt="blog">
-                <button href="#"  id="informetres" class="btn btn-primary">Otros</button>
+                <h5 class="card-title  text-light">Costos indirectos</h5>
+                <img class="iconos" src="/public/lista-de-quehaceres (7).png" alt="blog">
+                <button href="#"  id="informetres" class="btn btn-primary">Costos</button>
             </div>
         </div>
     </div>
 
     <tabla-informe></tabla-informe>
     <tabla-informe-lote></tabla-informe-lote>
+    <tabla-informe-costo></tabla-informe-costo>
+
 
 
     <script type="module" src="/src/components/tabla.js"></script>
     <script type="module" src="/src/components/tablaLotes.js"></script>
+    <script type="module" src="/src/components/tablaCostos.js"></script>
     <script type="module" src="/src/scripts/mainTablas.js"></script>
 </body>
 </html>
