--- a/calculador.html
+++ b/calculador.html
@@ -29,7 +29,7 @@
             <div id="tarjeta" class="card-body">
                 <h5 class="card-title  text-light" >Calcular costos de mano de obra</h5>
                 <img class="iconos" src="/public/lista-de-quehaceres(4).png" alt="blog">
-                <button id="calcularManoDeObra" class="btn btn-primary">Trabajadores</button>
+                <button id="calcularManoDeObra" class="btn btn-primary">Calcular</button>
             </div>
             <calc-obra></calc-obra>
         </div>
