--- a/registro.html
+++ b/registro.html
@@ -157,7 +157,7 @@
                 <div class="col-md-7">
                     <label for="inputEmail4" class="form-label">Descripcion</label>
                     <br>
-                    <textarea id="descripcion-costo" name="comentarios" style="height:7rem; width:30rem;" >
+                    <textarea id="descripcion-costo" name="comentarios" style="height:7rem; width:100%;" >
                      </textarea>
                 </div>
                 
