mejora de responsive

--- a/informes.html
+++ b/informes.html
@@ -41,9 +41,9 @@
         </div>
         <div id="info4" class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
             <div id="tarjeta" class="card-body">
-                <h5 class="card-title  text-light">Costos indirectos</h5>
+                <h5 class="card-title  text-light">Historial de Calculos</h5>
                 <img class="iconos" src="/public/lista-de-quehaceres(9).png" alt="blog">
-                <button href="#"  id="informecuatro" class="btn btn-primary">Costos</button>
+                <button href="#"  id="informecuatro" class="btn btn-primary">Historial</button>
             </div>
         </div>
     </div>
