--- a/informes.html
+++ b/informes.html
@@ -51,12 +51,13 @@
     <tabla-informe></tabla-informe>
     <tabla-informe-lote></tabla-informe-lote>
     <tabla-informe-costo></tabla-informe-costo>
-
+    <tabla-obra></tabla-obra>
 
 
     <script type="module" src="/src/components/tabla.js"></script>
     <script type="module" src="/src/components/tablaLotes.js"></script>
     <script type="module" src="/src/components/tablaCostos.js"></script>
+    <script type="module" src="/src/components/tablaObra.js"></script>
     <script type="module" src="/src/scripts/mainTablas.js"></script>
 </body>
 </html>
