funsion de eliminar materia prima

--- a/registro.html
+++ b/registro.html
@@ -93,7 +93,7 @@
                     <option value="Telas">Telas</option>
                     <option value="Hilos">Hilos</option>
                     <option value="Botones">Botones</option>
-                    <option value="Cierres">Cierres</option>
+                    <option value="Cierres">Sierres</option>
                     <option value="Cauchos">Cauchos</option>
                     <option value="lentejuelas">lentejuelas</option>
                     <option value="Encajes">Encajes</option>
