--- a/registro.html
+++ b/registro.html
@@ -12,9 +12,9 @@
     <a id="inicio" href="/index.html">Inicio</a>
     <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
-        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./calculador.html"><h4 id="cal">Calcular</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./informes.html"><h4 id="inf">Informes</h4></a>
     </div>
     <div id="inventoryDiv" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
         <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
