Some other configs safe

--- a/informes.html
+++ b/informes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boostrap.css">
-    <title>Document</title>
+    <title>Menú de informes - Confecciones PEPITA</title>
     
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
