--- a/registro.html
+++ b/registro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/boostrap.css">
-    <title>Document</title>
+    <title>Menú de registros - Confecciones PEPITA</title>
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
     <h1 class="title">CONFECCIONES PEPITA</h1>
