--- a/informes.html
+++ b/informes.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/dist/women.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="boostrap.css">
-    <title>Document</title>
+    <title>INFORMES</title>
     
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
