--- a/registro.html
+++ b/registro.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/dist/women.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/boostrap.css">
-    <title>Document</title>
+    <title>REGISTRO</title>
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
     <h1 class="title">CONFECCIONES PEPITA</h1>
@@ -130,6 +131,10 @@
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Productos fabricados al Mes</label>
                 <input type="number" class="form-control" id="productosmes" required>
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Lotes al Mes</label>
+                <input type="number" class="form-control" id="lotesmes" required>
             </div>
             
            
