--- a/informes.html
+++ b/informes.html
@@ -55,10 +55,10 @@
     <tabla-obra></tabla-obra>
 
 
-    <script type="module" src="/src/components/tabla.js"></script>
-    <script type="module" src="/src/components/tablaLotes.js"></script>
-    <script type="module" src="/src/components/tablaCostos.js"></script>
-    <script type="module" src="/src/components/tablaObra.js"></script>
-    <script type="module" src="/src/scripts/mainTablas.js"></script>
+    <script type="module" src="./src/components/tabla.js"></script>
+    <script type="module" src="./src/components/tablaLotes.js"></script>
+    <script type="module" src="./src/components/tablaCostos.js"></script>
+    <script type="module" src="./src/components/tablaObra.js"></script>
+    <script type="module" src="./src/scripts/mainTablas.js"></script>
 </body>
 </html>
