feat: :sparkles: Resta de materia prima terminada

--- a/registro.html
+++ b/registro.html
@@ -91,13 +91,13 @@
                 <label for="inputState" class="form-label">Categoria</label>
                 <select id="categoria" name="categoria" class="form-select" required>
                     <option selected>Choose...</option>
-                    <option value="Telas">Telas</option>
-                    <option value="Hilos">Hilos</option>
-                    <option value="Botones">Botones</option>
-                    <option value="Cierres">Sierres</option>
-                    <option value="Cauchos">Cauchos</option>
-                    <option value="lentejuelas">lentejuelas</option>
-                    <option value="Encajes">Encajes</option>
+                    <option >telas</option>
+                    <option >hilos</option>
+                    <option >botones</option>
+                    <option >sierres</option>
+                    <option >cauchos</option>
+                    <option >lentejuelas</option>
+                    <option >encajes</option>
                 </select>
             </div>
             <div class="col-md-4">
