--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1 class="title">CONFECCIONES PEPITA</h1>
       <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
       <div class="menu-opciones">
-          <button class="menu-registro" style="text-decoration: none;"><h4 id="reg">Registro</h4></button>
-          <button class="menu-calcular" style="text-decoration: none;"><h4 id="cal">Calcular</h4></button>
-          <button class="menu-informes" style="text-decoration: none;"><h4 id="inf">Informes</h4></button>
+          <button class="menu-registro opcion" style="text-decoration: none;"><h4 class="reg">Registro</h4></button>
+          <button class="menu-calcular opcion" style="text-decoration: none;"><h4 class="cal">Calcular</h4></button>
+          <button class="menu-informes opcion" style="text-decoration: none;"><h4 class="inf">Informes</h4></button>
       </div>
       <div id="contenedor-principal">
         <div id="contenedor-imagenes">
@@ -42,9 +42,9 @@
     <h1 class="title">CONFECCIONES PEPITA</h1>
       <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
       <div class="menu-opciones">
-          <button class="menu-registro" style="text-decoration: none;"><h4 id="reg">Registro</h4></button>
-          <button class="menu-calcular" style="text-decoration: none;"><h4 id="cal">Calcular</h4></button>
-          <button class="menu-informes" style="text-decoration: none;"><h4 id="inf">Informes</h4></button>
+          <button class="menu-registro opcion" style="text-decoration: none;"><h4 class="reg">Registro</h4></button>
+          <button class="menu-calcular opcion" style="text-decoration: none;"><h4 class="cal">Calcular</h4></button>
+          <button class="menu-informes opcion" style="text-decoration: none;"><h4 class="inf">Informes</h4></button>
       </div>
       <div id="info1" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
           <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
@@ -90,9 +90,9 @@
         <button class="inicio">Inicio</button>
         <header style="background-image: url('/public/CONFECCIONES\ PEPITA.png');"></header>
         <div class="menu-opciones">
-            <button class="menu-registro" style="text-decoration: none;"><h4 id="reg">Registro</h4></button>
-            <button class="menu-calcular" style="text-decoration: none;"><h4 id="cal">Calcular</h4></button>
-            <button class="menu-informes" style="text-decoration: none;"><h4 id="inf">Informes</h4></button>
+            <button class="menu-registro opcion" style="text-decoration: none;"><h4 class="reg">Registro</h4></button>
+            <button class="menu-calcular opcion" style="text-decoration: none;"><h4 class="cal">Calcular</h4></button>
+            <button class="menu-informes opcion" style="text-decoration: none;"><h4 class="inf">Informes</h4></button>
         </div>
         <div id="cards">
             <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
@@ -121,12 +121,6 @@
         
       <h1 class="title">CONFECCIONES PEPITA</h1>
       <button class="inicio">Inicio</button>
-      <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
-      <div class="menu-opciones">
-          <button class="menu-registro" style="text-decoration: none;" href="><h4 id="reg">Registro</h4></button>
-          <button class="menu-calcular" style="text-decoration: none;" href="><h4 id="cal">Calcular</h4></button>
-          <button class="menu-informes" style="text-decoration: none;" href="><h4 id="inf">Informes</h4></button>
-      </div>
       <div id="inventoryDiv" style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
           <div class="card text-center mb-3" style="width: 18rem; border: none; background-color: transparent;">
               <div id="tarjeta" class="card-body">
