feat: organización para despliegue

--- a/src/pages/calculador.html
+++ b/src/pages/calculador.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/dist/women.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="boostrap.css">
+    <link rel="stylesheet" href="../../public/style.css">
+    <link rel="stylesheet" href="../../public/boostrap.css">
     <title>CALCULAR</title>
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif);">
@@ -13,9 +13,9 @@
     <a id="inicio" href="./index.html">Inicio</a>
     <header style="background-image: url('/public/CONFECCIONES\ PEPITA.png');"></header>
     <div class="menu-opciones">
-        <a id="opcion" style="text-decoration: none;" href="/registro.html"><h4 id="reg">Registro</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="/calculador.html"><h4 id="cal">Calcular</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="/informes.html"><h4 id="inf">Informes</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./calculador.html"><h4 id="cal">Calcular</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./informes.html"><h4 id="inf">Informes</h4></a>
     </div>
     <div id="cards">
         <div class="card text-center mb-3" style="width: 18rem; border:none; background-color: transparent;">
@@ -36,8 +36,8 @@
 
     <calc-eficiencia></calc-eficiencia>
     <calc-obra></calc-obra>
-    <script type="module" src="./src/components/calculadoraEficiencia.js"></script>
-    <script type="module" src="./src/components/manoDeObra.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../../src/components/calculadoraEficiencia.js"></script>
+    <script type="module" src="../../src/components/manoDeObra.js"></script>
+    <script type="module" src="../main.js"></script>
 </body>
 </html>
