--- a/src/pages/informes.html
+++ b/src/pages/informes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/dist/women.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="boostrap.css">
+    <link rel="stylesheet" href="../../public/style.css">
+    <link rel="stylesheet" href="../../public/boostrap.css">
     <title>INFORMES</title>
     
 </head>
@@ -55,10 +55,10 @@
     <tabla-obra></tabla-obra>
 
 
-    <script type="module" src="./src/components/tabla.js"></script>
-    <script type="module" src="./src/components/tablaLotes.js"></script>
-    <script type="module" src="./src/components/tablaCostos.js"></script>
-    <script type="module" src="./src/components/tablaObra.js"></script>
-    <script type="module" src="./src/scripts/mainTablas.js"></script>
+    <script type="module" src="../../src/components/tabla.js"></script>
+    <script type="module" src="../../src/components/tablaLotes.js"></script>
+    <script type="module" src="../../src/components/tablaCostos.js"></script>
+    <script type="module" src="../../src/components/tablaObra.js"></script>
+    <script type="module" src="../../src/scripts/mainTablas.js"></script>
 </body>
 </html>
