--- a/src/pages/registro.html
+++ b/src/pages/registro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/dist/women.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/boostrap.css">
+    <link rel="stylesheet" href="../../public/style.css">
+    <link rel="stylesheet" href="../../public/boostrap.css">
     <title>REGISTRO</title>
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
@@ -175,6 +175,6 @@
             </form>
     </div>
     
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../main.js"></script>
 </body>
 </html>
