--- a/src/pages/informes.html
+++ b/src/pages/informes.html
@@ -60,5 +60,6 @@
     <script type="module" src="../../src/components/tablaCostos.js"></script>
     <script type="module" src="../../src/components/tablaObra.js"></script>
     <script type="module" src="../../src/scripts/mainTablas.js"></script>
+    <script type="module" src="../main.js"></script>
 </body>
 </html>
