BUILD FINAL ESPERO POR MILESIMA VEZ

--- a/src/pages/calculador.html
+++ b/src/pages/calculador.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif);">
     <h1 class="title">CONFECCIONES PEPITA</h1>
-    <a id="inicio" href="./index.html">Inicio</a>
+    <a id="inicio" href="index.html">Inicio</a>
     <header style="background-image: url('/public/CONFECCIONES\ PEPITA.png');"></header>
     <div class="menu-opciones">
         <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a>
