--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       
     </div>
     
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
