ULTIMO ULTIMO POR FAVOR YA AYUDA

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1 class="title">CONFECCIONES PEPITA</h1>
     <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
     <div class="menu-opciones">
-        <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="./calculador.html"><h4 id="cal">Calcular</h4></a>
-        <a id="opcion" style="text-decoration: none;" href="./informes.html"><h4 id="inf">Informes</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="/src/pages/registro.html"><h4 id="reg">Registro</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="/src/pages/calculador.html"><h4 id="cal">Calcular</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="/src/pages/informes.html"><h4 id="inf">Informes</h4></a>
     </div>
     <div id="contenedor-principal">
       <div id="contenedor-imagenes">
