ultimo commit del proyecto

--- a/src/pages/informes.html
+++ b/src/pages/informes.html
@@ -10,7 +10,7 @@
     
 </head>
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
-    <a id="inicio" href="/index.html">Inicio</a>
+    <a id="inicio" href="../../index.html">Inicio</a>
   <h1 class="title">CONFECCIONES PEPITA</h1>
     <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
