ultimo commit del proyecto ahora si

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
    
     <h1 class="title">CONFECCIONES PEPITA</h1>
-    <header style="background-image: url(/public/CONFECCIONES\ PEPITA.png);"></header>
+    <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
         <a id="opcion" style="text-decoration: none;" href="/src/pages/registro.html"><h4 id="reg">Registro</h4></a>
         <a id="opcion" style="text-decoration: none;" href="/src/pages/calculador.html"><h4 id="cal">Calcular</h4></a>
