feat: :rocket: :sparkles: Proyecto terminado y deploy :rocket: :sparkles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif)">
     
-   
+    <!--Terminado-->
     <h1 class="title">CONFECCIONES PEPITA</h1>
     <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
