--- a/src/pages/informes.html
+++ b/src/pages/informes.html
@@ -9,6 +9,7 @@
     <title>INFORMES</title>
     
 </head>
+<!-- Terminado -->
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif); background-size: cover;">
     <a id="inicio" href="../../index.html">Inicio</a>
   <h1 class="title">CONFECCIONES PEPITA</h1>
