--- a/src/pages/calculador.html
+++ b/src/pages/calculador.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="../../public/boostrap.css">
     <title>CALCULAR</title>
 </head>
+<!-- Terminado -->
 <body style="background-image: url(/public/tienda-ropa-tienda-ropa-perchas-tienda-boutique-moderna_1150-8886.avif);">
     <h1 class="title">CONFECCIONES PEPITA</h1>
     <a id="inicio" href="../../index.html">Inicio</a>
     <header style="background-image: url(/public/CONFECCIONES%20PEPITA.png);"></header>
     <div class="menu-opciones">
-        <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a>
+        <a id="opcion" style="text-decoration: none;" href="./registro.html"><h4 id="reg">Registro</h4></a> 
         <a id="opcion" style="text-decoration: none;" href="./calculador.html"><h4 id="cal">Calcular</h4></a>
         <a id="opcion" style="text-decoration: none;" href="./informes.html"><h4 id="inf">Informes</h4></a>
     </div>
@@ -33,7 +34,7 @@
             </div>
         </div>
     </div>
-
+    
     <calc-eficiencia></calc-eficiencia>
     <calc-obra></calc-obra>
     <script type="module" src="../../src/components/calculadoraEficiencia.js"></script>
