--- a/src/pages/registro.html
+++ b/src/pages/registro.html
@@ -43,7 +43,7 @@
         
     </div>
     <div id="cards">
-        
+        <!-- Terminado -->
         <form id="mpForm" class="row g-3">
             <div class="col-md-2">
                 <label for="inputEmail4" class="form-label">Id</label>
